--- a/templates/katzen/order/_list_orders.html.twig
+++ b/templates/katzen/order/_list_orders.html.twig
@@ -29,7 +29,7 @@
           </div>
           <div class="card-footer text-end">
             <a href="{{ path('order_edit_form', { id: order.id }) }}" class="btn btn-sm btn-outline-primary">Edit</a>
-            <a href="#" class="btn btn-sm btn-outline-success">Mark as Ready</a>
+            <a href="{{ path('order_mark_ready', { id: order.id }) }}" class="btn btn-sm btn-outline-success">Mark as Ready</a>
           </div>
         </div>
       </div>
