--- a/templates/katzen/recipe/index.html.twig
+++ b/templates/katzen/recipe/index.html.twig
@@ -118,8 +118,8 @@
     <section class="dashboard-section">
       <h3>Catalog Management</h3>
       <ul class="dashboard-links">
-        <li><a href="{{ path('app_item') }}">View Item Catalog</a></li>
-        <li><a href="{{ path('app_item') }}">Update Item Catalog</a></li>
+        <li><a href="{{ path('item_index') }}">View Item Catalog</a></li>
+        <li><a href="{{ path('item_index') }}">Update Item Catalog</a></li>
       </ul>
     </section>
 
