--- a/templates/katzen/base.html.twig
+++ b/templates/katzen/base.html.twig
@@ -47,9 +47,17 @@
                     </a>
                 </li>
                 <li>
-                    <a href="{{ path('stock_index') }}" class="nav-link {{ activeItem == 'stock' ? 'active' : 'text-secondary' }}" data-item="stock">
-                        <i class="bi bi-box-seam me-2"></i>Stock
+                    <a href="#stockSub" data-bs-toggle="collapse" data-item="stock-container" class="nav-link d-flex justify-content-between align-items-center {{ activeMenu == 'stock' ? 'border border-primary text-secondary' : 'text-secondary' }}">
+                        <span><i class="bi bi-box-seam me-2"></i>Stock</span>
+                        <i class="bi bi-chevron-{{ activeMenu == 'stock' ? 'down' : 'right' }}"></i>
                     </a>
+                    <div class="collapse {{ activeMenu == 'stock' ? 'show' : '' }}" id="stockSub">
+                        <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+                          <li><a href="{{ path('admin') }}" class="nav-link ps-4 {{ activeItem == 'item-create' ? 'active' : 'text-secondary' }}" data-item="item-create">Add An Item</a></li>
+                          <li><a href="{{ path('stock_index') }}" class="nav-link ps-4 {{ activeItem == 'stock' ? 'active' : 'text-secondary' }}" data-item="stock-list">Current Stock</a></li>                          
+                          <li><a href="{{ path('item_index') }}" class="nav-link ps-4 {{ activeItem == 'items' ? 'active' : 'text-secondary' }}" data-item="item-list">Manage Items</a></li>
+                        </ul>
+                    </div>
                 </li>
             </ul>
         </nav>
@@ -58,6 +66,7 @@
     <div class="d-flex flex-column flex-grow-1">
       {% include 'katzen/partials/_header.html.twig' %}
       <main class="flex-grow-1 overflow-auto p-4" id="main-content">
+        {% include 'katzen/partials/_flashes.html.twig' %}
         {% block main_content %}
         <div>Loading...</div>
         {% endblock %}
