--- a/templates/katzen/item/show.html.twig
+++ b/templates/katzen/item/show.html.twig
@@ -1,8 +1,8 @@
-{% extends 'base.html.twig' %}
+{% extends 'katzen/base.html.twig' %}
 
 {% block title %}{{ item.name }}{% endblock %}
 
-{% block body %}
+{% block main_content %}
     <h1>{{ item.name }}</h1>
     <p>{{ item.description }}</p>
 
