--- a/templates/greg/work.html.twig
+++ b/templates/greg/work.html.twig
@@ -1,27 +1,71 @@
-{% block title %}Greg Suehr | Projects{% endblock %}
+{% extends 'profile_base.html.twig' %}
+
+{% block title %}Greg Suehr | Work{% endblock %}
 
 {% block content %}
-<section class="section hero-section">
-  <div class="card">
-    <img src="{{ asset('images/pittsburgh-warm_small_jordan-faux-unsplash.jpg') }}" class="card-img img-fluid hero-image">
-    <div class="card-img-overlay text-center text-white align-self-center">
-      <h1><strong>Projects</strong></h1>
-      <p class="intro">Some areas of interest and active projects.
-      </o>
-  </div>
-</section>
-
-<section class="summary-section">
+<section class="hero-section">
   <div class="container">
     <div class="row">
-      <div class="col-md-6">
+      <div class="col">
+        <h2>Work</h2>
+        <p><emphasis>"...sucks, I know"</emphasis></p>
+
+        <p>
+          I don't actually think work sucks, but I love Blink-182.
+          I love my work.
+          I believe the cultivation of a craft (τέχνη, "techne" one stem of "technology") is an essential component of sound mind and good life.
+        </p>
+
+        <h5>Software Development</h5>
+        <p>
+          "Learn to code", they said. Well, I did. Then it became work.          
+        </p>
+        <p>
+          My approach to software development is: people first, systems next.
+          It is also language agnostic.
+          I have developed:
+          (i) Web applications
+          (ii) Business systems: ERP, CRM, integrations with eCommerce, logistics, and  payments.
+          (iii) Data piplines for 
+          (iv) Web crawlers
+        </p>
+        <p>
+          
+        </p>
+        <p>
+        </p>
+        
         <h5>Writing</h5>
-        <p>I write <a>poems</a>, <a>plays</a>, and occassionally <a>hot takes</a> on aesthetics, land ethics, techonology an other topics of interest.</p>
+        <p>
+          I enjoy writing, and I write often.
+        </p>
+        <p>
+          I write <a>poetry</a> and <a>plays</a>.
+        </p>
+        <p>
+          , and occassionally <a>hot takes</a> on aesthetics, land ethics, techonology an other topics of interest.</p>
+        </p>
+        
         <h5>Translation</h5>
-        <p>I occassionaly produce translations of German and French work.</p>
+        <p>I translate wo of German and French work.</p>
         <p>My current focus is producing translations of <a>Aesop's Fables</a> (mostly as a reason to explore more of the collection). I am also compiling works of <a>Rilke</a> and <a>Günter Anders</a>.</p>
-        <h5>Technology</h5>
-        <a>I build and maintain websites for artists and creative organizations.        
+        
+        <h5>Teaching</h5>
+        <p>
+          I occasionally take students for private lessons in guitar, bass, and the foundations of music theory.
+        </p>
+
+        <h5>Teaching</h5>
+        <p>
+          ...
+        </p>
+
+        <h5>Other Work</h5>
+        <p>
+          Like I said, I love my work, and I have a lot of it.
+        </p>          
+
+        <img src="{{ asset('images/pittsburgh-warm_small_jordan-faux-unsplash.jpg') }}" class="img-fluid hero-image section">
     </div>
 
   </div>
