--- a/templates/profile_base.html.twig
+++ b/templates/profile_base.html.twig
@@ -17,13 +17,13 @@
       <div class='container-fluid'>
         <div class='row'>
           <div class='col-md-6'>
-            <h5>Greg's Site</h5>
+            <h5>Greg</h5>
           </div>
           <div class='col-md-1'>
             <a href="{{ path('profile_landing') }}">Home</a>
           </div>
           <div class='col-md-1'>
-            <a href="{{ path('profile_overview') }}">About</a>
+            <a href="{{ path('profile_about') }}">About</a>
           </div>
           <div class='col-md-1'>            
             <a href="{{ path('profile_work') }}">Work</a>
@@ -46,35 +46,9 @@
       <div class="site-map">
         <div class="container">
           <div class="row">
-            <div class="col-md-6 mb-3">
-              <h5>Greg's Site</h5>
-              <br>
-              <p>Links!</p>
-            </div>
-            <div class="col-md-2 mb-3">
-              <p class="text-primary">Software Development</p>
-              <div class="container">
-                <a href="{{ path('app_recipe') }}" class="text-secondary-dark">Katzen: Kitchen</a>
-                <a href="{{ path('profile_simulations') }}" class="text-secondary-dark">Physics Simulations</a>
-                <a href="{{ path('profile_hire_me_tech') }}" class="text-secondary-dark">Hire Me!</a>
-              </div>
-            </div>
-            <div class="col-md-2 mb-3">
-              <div class="container">
-                <p class="text-primary">Consulting Services</p>
-                <a href="{{ path('app_recipe') }}" class="text-secondary-dark">Design Services</a>
-                <a href="{{ path('profile_simulations') }}" class="text-secondary-dark">Process Improvement</a>
-                <a href="{{ path('profile_hire_me_tech') }}" class="text-secondary-dark">Growth Consulting</a>
-              </div>
-            </div>
-            <div class="col-md-2 mb-3">
-              <div class="container">
-                <p class="text-primary">Creative Professionals</p>
-                <a href="{{ path('app_recipe') }}" class="text-secondary-dark">Plays</a><br>
-                <a href="{{ path('profile_simulations') }}" class="text-secondary-dark">Poems</a><br>
-                <a href="{{ path('profile_hire_me_tech') }}" class="text-secondary-dark">Work With Me</a>
-              </div>
-            </div>
+            <p></p>
+            <p></p>            
+            <aside>This page intentionally left blank.</p>
           </div>
         </div>
       </div>
