Plays page template

--- a/templates/greg/about.html.twig
+++ b/templates/greg/about.html.twig
@@ -12,7 +12,7 @@
 
     <p class="intro">
       The page is a short note outlining a few select personal facts, i.e. about "me".
-      If you are interested in my work or working with me
+      If you are interested in my work or working with me, 
       My blog (also in the links above), contains an unordered list of both personal and professional thoughts.
     </p>
 
